<resources>
    <string name="app_name" translatable="false">FYT HW OneKey</string>
    <string name="dvd_alias" translatable="false">FYT HW OneKey DVD button</string>
    <string name="media_alias" translatable="false">FYT HW OneKey Media button</string>
    <string name="eq_alias" translatable="false">FYT HW OneKey EQ button</string>
    <string name="band_alias" translatable="false">FYT HW OneKey BAND button</string>
    <string name="mode_alias" translatable="false">FYT HW OneKey MODE "carrousel" button options</string>
    <string name="btav_alias" translatable="false">FYT HW OneKey BT AV options (derived from the MODE button)</string>
    <string name="btphone_alias" translatable="false">FYT HW OneKey BT phone options (derived from the MODE button)</string>
    <string name="av_alias" translatable="false">FYT HW OneKey AV options (derived from the MODE button)</string>
    <string name="video_alias" translatable="false">FYT HW OneKey Video options (derived from the MODE button)</string>
    <string name="voice_alias" translatable="false">FYT HW OneKey Voice option (for T\'eyes firmware)</string>

    <string name="settings_screen">FYT HW OneKey Configuration screen</string>
<!--    <string name="dvd_settings">The several options for the DVD button</string>
    <string name="media_settings">The several options for the Media button</string>
    <string name="eq_settings">The several options for the EQ button</string>
    <string name="band_settings">The several options for the BAND button</string> -->
    <string name="band_settings">Configure the BAND (Radio) button</string>
    <string name="band_key_call_title">BAND (radio) Key: Call method</string>
    <string name="band_key_text_title">BAND (Radio) Key: Action string to be used</string>
    <string name="dvd_settings">Configure the DVD button</string>
    <string name="dvd_key_call_title">DVD Key: Call method</string>
    <string name="dvd_key_text_title">DVD Key: Action string to be used</string>
    <string name="media_settings">Configure the Media button</string>
    <string name="media_key_call_title">MEDIA Key: Call method</string>
    <string name="media_key_text_title">MEDIA Key: Action string to be used</string>
    <string name="eq_settings">Configure the EQ button</string>
    <string name="eq_key_call_title">EQ Key: Call method</string>
    <string name="eq_key_text_title">EQ Key: Action string to be used</string>
    <string name="mode_settings">Configure the options for the MODE "carrousel" HW button</string>
    <string name="btav_settings">Configure the BT AV option (derived from the MODE button)</string>
    <string name="btav_key_call_title">BTAV Key: Call method</string>
    <string name="btav_key_text_title">BTAV Key: Action string to be used</string>
    <string name="btphone_settings">Configure the BT Phone option (derived from the MODE button)</string>
    <string name="btphone_key_call_title">BTPHONE Key: Call method</string>
    <string name="btphone_key_text_title">BTPHONE Key: Action string to be used</string>
    <string name="av_settings">Configure the AV option (derived from the MODE button)</string>
    <string name="av_key_call_title">AV Key: Call method</string>
    <string name="av_key_text_title">AV Key: Action string to be used</string>
    <string name="video_settings">Configure the Video option (derived from the MODE button)</string>
    <string name="video_key_call_title">VIDEO Key: Call method</string>
    <string name="video_key_text_title">VIDEO Key: Action string to be used</string>
    <string name="voice_settings">Configure the Voice option (experimental CC2: alpha)</string>
    <string name="voice_key_call_title">VOICE Key: Call method</string>
    <string name="voice_key_text_title">VOICE Key: Action string to be used</string>

    <string name="packagename">Start apk by package name.</string>
    <!-- <string name="packagename_summary">Separate multiple package names with a semicolon (;)</string> -->
    <string name="packagename_summary">Add the package name</string>
    <string name="call_method_summary">by package name, intent or system call</string> 
    <string name="intent">Start apk by intent.</string>
    <string name="intent_summary">Separate multiple intents with a semicolon (;)</string>
    <string name="syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="syscall_summary">Separate multiple calls with a semicolon (;)</string>

    <string name="list_apps">Display installed Apks (with package names)</string>
    <string name="listapps_title">List all installed apps (with package names)</string>
    <string name="listapps_summary">Retrieves information on the application packages that are currently installed on the head unit.</string>
    <string name="listapps_appname">App Name: </string> <!-- add a space behind -->
    <string name="listapps_pkgname">Package Name: </string> <!-- add a space behind -->

    <string name="pkg_notconfigured_short">No package configured</string>
    <string name="pkg_notconfigured_long">No package configured, starting Config screen for setup.</string>
    <string name="pkg_configured_short">Configured package:</string>

    <string name="acc_on_off_settings">Define apps or actions when the contact/unit is switched ON or OFF; or when coming out of resume.</string>
<!--    <string name="acc_on_settings">What to do when contact is switched on (ACC_ON); Only works with nokill main server mod</string>
    <string name="switch_on_wifi_during_accon">ON: The WiFi is switched on when the contact is switched on (to overcome PX5 bug)</string>
    <string name="dont_touch_wifi_during_accon">OFF: Do not touch the WiFi state when contact is switched on</string>
    <string name="switch_on_wifi">Option to switch on WiFi during acc_on.</string>
    <string name="restart_player_during_accon">ON: Restart active media player when contact is switched on</string>
    <string name="dont_restart_player_during_accon">OFF: Do not restart active media player when contact is switched on</string>
    <string name="restart_player">Option to restart the active media player during acc_on.</string>
    <string name="accon_packagename">Start apk by package name.</string>
    <string name="accon_packagename_summary">Separate multiple package names with a semicolon (;)</string>
    <string name="accon_intent">Start apk by intent.</string>
    <string name="accon_intent_summary">Separate multiple intents with a semicolon (;)</string>
    <string name="accon_syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="accon_syscall_summary">Separate multiple calls with a semicolon (;)</string> -->
    
<!--    <string name="usb_on_off_settings">Define apps or actions when the contact/unit is switched ON or OFF; or when coming out of resume.</string>
    <string name="usb_on_settings">What to do when contact is switched on; Requires at least 1 connected USB device</string>
    <string name="switch_on_wifi_during_usbon">ON: The WiFi is switched on when the contact is switched on (to overcome PX5 bug)</string>
    <string name="dont_touch_wifi_during_usbon">OFF: Do not touch the WiFi state when contact is switched on</string>
    <string name="switch_on_wifi">Option to switch on WiFi during usb_on.</string>
    <string name="restart_player_during_usbon">ON: Restart active media player when contact is switched on</string>
    <string name="dont_restart_player_during_usbon">OFF: Do not restart active media player when contact is switched on</string>
    <string name="restart_player">Option to restart the active media player during usb_on.</string>
    <string name="usbon_packagename">Start apk by package name.</string>
    <string name="usbon_packagename_summary">Separate multiple package names with a semicolon (;)</string>
    <string name="usbon_intent">Start apk by intent.</string>
    <string name="usbon_intent_summary">Separate multiple intents with a semicolon (;)</string>
    <string name="usbon_syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="usbon_syscall_summary">Separate multiple calls with a semicolon (;)</string> -->

<!--    <string name="acc_off_settings">What to do when contact is switched off (ACC_OFF)</string>
    <string name="acc_off_call_title">ACC_OFF: Call method</string>
    <string name="acc_off_text_title">ACC_OFF: String to be used</string>
    <string name="switch_off_wifi_during_accoff">ON: Switch off WiFi when contact is switched off</string>
    <string name="dont_touch_wifi_during_accoff">OFF: Do not touch the WiFi state when contact is switched off</string>
    <string name="switch_off_wifi">Option to switch off WiFi during acc_off.</string>
    <string name="pause_player_during_accoff">ON: Pause active media player when contact is switched off</string>
    <string name="dont_pause_player_during_accoff">OFF: Do not pause active media player when contact is switched off</string>
    <string name="pause_player">Option to pause the active media player during acc_off.</string>
    <string name="accoff_syscall">Execute system call(s) to execute linux command/script.</string>
    <string name="accoff_syscall_summary">Separate multiple commands with a semicolon (;)</string> -->

    <string name="about_info_screen">Information Screen</string>
    <string name="about">About</string>
    <string name="xda_discussion_title">XDA Discussion thread</string>
    <string name="xda_discussion_summary">Discuss or ask questions about this apk on XDA</string>
    <string name="github_title">Source code</string>
    <string name="github_summary">Explore the source code of FytHWOneKey on Github</string>

    <string name="media_key_title">Which media key command should be send</string>
</resources>
