<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
            android:title="@string/band_settings"
            android:key="band_settings">
            <EditTextPreference
                android:key="band_packagename_entry"
                android:title="@string/packagename"
                android:summary="@string/packagename_summary"
                android:defaultValue="com.syu.radio" />
<!--            <EditTextPreference
                android:key="band_intent_entry"
                android:title="@string/intent"
                android:summary="@string/intent_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="band_intent_syscall"
                android:title="@string/syscall"
                android:summary="@string/syscall_summary"
                android:defaultValue="" /> -->
    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/dvd_settings"
            android:key="dvd_settings">
            <EditTextPreference
                android:key="dvd_packagename_entry"
                android:title="@string/packagename"
                android:summary="@string/packagename_summary"
                android:defaultValue="com.syu.dvd" />
<!--            <EditTextPreference
                android:key="dvd_intent_entry"
                android:title="@string/intent"
                android:summary="@string/intent_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="dvd_intent_syscall"
                android:title="@string/syscall"
                android:summary="@string/syscall_summary"
                android:defaultValue="" /> -->
    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/media_settings"
            android:key="media_settings">
            <EditTextPreference
                android:key="media_packagename_entry"
                android:title="@string/packagename"
                android:summary="@string/packagename_summary"
                android:defaultValue="com.syu.music" />
<!--            <EditTextPreference
                android:key="media_intent_entry"
                android:title="@string/intent"
                android:summary="@string/intent_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="media_intent_syscall"
                android:title="@string/syscall"
                android:summary="@string/syscall_summary"
                android:defaultValue="" /> -->
    </PreferenceScreen>

    <PreferenceScreen
            android:title="@string/eq_settings"
            android:key="eq_settings">
            <EditTextPreference
                android:key="eq_packagename_entry"
                android:title="@string/packagename"
                android:summary="@string/packagename_summary"
                android:defaultValue="com.syu.eq" />
<!--            <EditTextPreference
                android:key="eq_intent_entry"
                android:title="@string/intent"
                android:summary="@string/intent_summary"
                android:defaultValue="" />
            <EditTextPreference
                android:key="eq_intent_syscall"
                android:title="@string/syscall"
                android:summary="@string/syscall_summary"
                android:defaultValue="" /> -->
    </PreferenceScreen>

    <Preference
        android:key="listapps"
        android:title="@string/listapps_title"
        android:summary="@string/listapps_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="org.hvdw.fythwonekey"
                android:targetClass="org.hvdw.fythwonekey.ListInstalledApps" />
    </Preference>

</PreferenceScreen>
